--- a/wiki/de/TechDraw_GeometricHatch.html
+++ b/wiki/de/TechDraw_GeometricHatch.html
@@ -155,12 +155,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185124
+Cached time: 20260111185134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.149 seconds
 Preprocessor visited node count: 599/1000000
 Post&#8208;expand include size: 29727/2097152 bytes
 Template argument size: 11827/2097152 bytes
@@ -171,19 +171,19 @@ Unstrip post&#8208;expand size: 5450/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.365      1 -total
- 19.82%    8.594      1 Template:TechDraw_Tools_navi/de
- 17.06%    7.396      4 Template:PropertyData/de
- 12.53%    5.433      2 Template:PropertyView/de
- 11.72%    5.082      2 Template:Navigation_menu_2
-  9.41%    4.082      4 Template:Code
-  7.22%    3.132      6 Template:Variable
-  6.00%    2.604      1 Template:GuiCommand/de
-  5.53%    2.397      1 Template:Userdocnavi/de
-  5.49%    2.382      2 Template:Docnav/de
+100.00%   44.638      1 -total
+ 18.05%    8.058      1 Template:TechDraw_Tools_navi/de
+ 10.95%    4.887      4 Template:PropertyData/de
+  9.67%    4.315      2 Template:PropertyView/de
+  9.60%    4.283      2 Template:Navigation_menu_2
+  7.70%    3.439     10 Template:MenuCommand
+  7.34%    3.277      1 Template:Incode
+  7.27%    3.244      4 Template:Code
+  7.23%    3.229      2 Template:Docnav/de
+  7.08%    3.162      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:203228-0!canonical and timestamp 20260111185124 and revision id 1735725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:203228-0!canonical and timestamp 20260111185134 and revision id 1735725. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
