--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -126,9 +126,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/de">Linie k&uuml;rzen</a>: Verk&uuml;rzt eine Hilfslinie oder eine Mittellinie an beiden Enden.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLockUnlockView.svg&amp;filetimestamp=20240707202859&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLockUnlockView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/de">Ansicht sperren/entsperren</a>: Sperrt bzw. entsperrt die Position einer Ansicht.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/de">Schnittansicht ausrichten</a>: Richte eine Schnittansicht rechtwinklig zur Quellansicht aus.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/de">Horizontale Kettenma&szlig;e anordnen</a>: Ordnet horizontale Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/de">Kettenma&szlig;e horizontal ausrichten</a>: Ordnet horizontale Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimension.svg&amp;filetimestamp=20240707203333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/de">Vertikale Kettenma&szlig;e anordnen</a>: Ordnet vertikale Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul></dd></dl>
 </div>
@@ -359,13 +357,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111184816
+Cached time: 20260111185236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.291 seconds
-Real time usage: 0.801 seconds
-Preprocessor visited node count: 886/1000000
+CPU time usage: 0.300 seconds
+Real time usage: 0.429 seconds
+Preprocessor visited node count: 885/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -375,18 +373,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.092      1 -total
- 35.63%   19.985      1 Template:TechDraw_Tools_navi/de
- 19.25%   10.799      2 Template:Navigation_menu_2
- 13.93%    7.813      2 Template:Docnav/de
- 10.40%    5.832     25 Template:Version/de
-  9.56%    5.363      5 Template:VersionPlus/de
-  9.30%    5.218      1 Template:Userdocnavi/de
-  6.10%    3.419      1 Template:KEY
-  3.37%    1.890      1 Template:TOCright
+100.00%   24.753      1 -total
+ 32.84%    8.130      1 Template:TechDraw_Tools_navi/de
+ 16.62%    4.115      2 Template:Navigation_menu_2
+ 12.39%    3.066      2 Template:Docnav/de
+ 11.45%    2.834      5 Template:VersionPlus/de
+ 10.58%    2.619     25 Template:Version/de
+  8.98%    2.223      1 Template:KEY
+  8.68%    2.149      1 Template:Userdocnavi/de
+  5.79%    1.433      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111184815 and revision id 1735713. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185236 and revision id 1735727. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
