--- a/wiki/de/TechDraw_ExportPageDXF.html
+++ b/wiki/de/TechDraw_ExportPageDXF.html
@@ -60,18 +60,16 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Auswahl in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> aktivieren.</li>
+<ol><li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind: Wahlweise das gew&uuml;nschte Zeichnungsblatt durch Auswahl in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> aktivieren.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Seite als DXF-Datei exportieren</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Page  &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Seite als DXF-Datei exportieren</b>  ausw&auml;hlen.</li>
-<li>Wenn ein Zeichnungsblatt im <a href="../de/Main_view_area.html" class="mw-redirect" title="Main view area/de">Hauptansichtsbereich</a> angezeigt wird: Mit der rechten Maustaste in das Fenster des Blattes klicken und im Kontextmen&uuml; die Option <b>Export DXF</b> ausw&auml;hlen.</li></ul></li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Blatt als DXF-Datei exportieren</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Zeichnungsblatt  &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Blatt als DXF-Datei exportieren</b>  ausw&auml;hlen.</li>
+<li>Wenn ein Zeichnungsblatt im <a href="../de/Main_View_Area.html" title="Main View Area/de">Hauptansichtsbereich</a> angezeigt wird: Mit der rechten Maustaste in das Fenster des Blattes klicken und im Kontextmen&uuml; die Option <b>Export DXF</b> ausw&auml;hlen.</li></ul></li>
 <li>Wenn mehrere Zeichnungsbl&auml;tter im Dokument vorhanden sind und noch kein Blatt aktiviert wurde, wird das Dialogfeld <b>Blattauswahl</b> ge&ouml;ffnet:
 <ol><li>Das gew&uuml;nschte Blatt ausw&auml;hlen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol></li>
-<li>Das Dialogfenster <b>Seite als DXF-Datei exportieren</b> wird ge&ouml;ffnet.</li>
+<li>Das Dialogfenster <b>Blatt als DXF-Datei exportieren</b> wird ge&ouml;ffnet.</li>
 <li>Einen Speicherort und einen Dateinamen ausw&auml;hlen.</li></ol>
-</div>
 <p><span id="Limitations"></span>
 </p>
 <h3><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h3>
@@ -150,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185243
+Cached time: 20260111185413
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 390/1000000
-Post&#8208;expand include size: 27483/2097152 bytes
-Template argument size: 11296/2097152 bytes
+CPU time usage: 0.079 seconds
+Real time usage: 0.102 seconds
+Preprocessor visited node count: 389/1000000
+Post&#8208;expand include size: 27494/2097152 bytes
+Template argument size: 11307/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -166,19 +164,19 @@ Unstrip post&#8208;expand size: 2220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.548      1 -total
- 28.61%    7.308      1 Template:TechDraw_Tools_navi/de
- 13.80%    3.526      1 Template:GuiCommand/de
- 12.51%    3.196      2 Template:Navigation_menu_2
- 10.06%    2.570      2 Template:Docnav/de
-  9.81%    2.506      1 Template:Code
-  6.96%    1.779      1 Template:TRUE
-  6.95%    1.776      1 Template:Userdocnavi/de
-  4.86%    1.242      8 Template:MenuCommand
-  4.60%    1.176      2 Template:Button
+100.00%   20.474      1 -total
+ 28.60%    5.856      1 Template:TechDraw_Tools_navi/de
+ 19.24%    3.939      2 Template:Navigation_menu_2
+ 11.51%    2.356      1 Template:GuiCommand/de
+ 10.26%    2.100      2 Template:Docnav/de
+  8.63%    1.766      1 Template:Userdocnavi/de
+  7.57%    1.549      1 Template:Code
+  6.92%    1.417      8 Template:MenuCommand
+  5.97%    1.222      1 Template:Incode
+  5.38%    1.102      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185243 and revision id 1735729. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185413 and revision id 1735733. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
