--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -128,9 +128,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/de">Schnittansicht ausrichten</a>: Richte eine Schnittansicht rechtwinklig zur Quellansicht aus.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/de">Kettenma&szlig;e horizontal ausrichten</a>: Ordnet horizontale Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimension.svg&amp;filetimestamp=20240707203333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/de">Kettenma&szlig;e vertikal ausrichten</a>: Ordnet vertikale Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosObliqueChainDimension.svg&amp;filetimestamp=20240707203247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/de">Schr&auml;ge Kettenma&szlig;e anordnen</a>: Ordnet schr&auml;ge Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosObliqueChainDimension.svg&amp;filetimestamp=20240707203247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/de">Schr&auml;ge Kettenma&szlig;e ausrichten</a>: Ordnet schr&auml;ge Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/de">Horizontale Ma&szlig;e anordnen</a>: Ordnet horizontale Ma&szlig;e mit gleichen Abst&auml;nden an.</li></ul></dd></dl>
 </div>
@@ -355,13 +353,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185303
+Cached time: 20260111185434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.330 seconds
-Real time usage: 0.453 seconds
-Preprocessor visited node count: 884/1000000
+CPU time usage: 0.293 seconds
+Real time usage: 0.401 seconds
+Preprocessor visited node count: 883/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -371,18 +369,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.324      1 -total
- 26.91%    8.700      1 Template:TechDraw_Tools_navi/de
- 14.64%    4.734     25 Template:Version/de
- 14.47%    4.678      2 Template:Navigation_menu_2
- 13.34%    4.312      2 Template:Docnav/de
- 12.59%    4.070      5 Template:VersionPlus/de
-  9.89%    3.198      1 Template:Userdocnavi/de
-  7.97%    2.577      1 Template:KEY
-  6.93%    2.241      1 Template:TOCright
+100.00%   23.183      1 -total
+ 21.65%    5.019      1 Template:TechDraw_Tools_navi/de
+ 18.06%    4.187      1 Template:Userdocnavi/de
+ 14.32%    3.319      2 Template:Navigation_menu_2
+ 13.53%    3.137      1 Template:KEY
+ 12.46%    2.889     25 Template:Version/de
+ 10.82%    2.509      2 Template:Docnav/de
+  8.15%    1.890      5 Template:VersionPlus/de
+  6.14%    1.424      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185303 and revision id 1735731. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185434 and revision id 1735735. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
