--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -131,9 +131,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosObliqueChainDimension.svg&amp;filetimestamp=20240707203247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/de">Schr&auml;ge Kettenma&szlig;e ausrichten</a>: Ordnet schr&auml;ge Ma&szlig;e fluchtend zu einer Ma&szlig;kette an.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeHorizDimension.svg&amp;filetimestamp=20240707201018&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeHorizDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/de">Horizontale Ma&szlig;e anordnen</a>: Ordnet horizontale Ma&szlig;e mit gleichen Abst&auml;nden an.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeVertDimension.svg&amp;filetimestamp=20240707201256&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeVertDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/de">Vertikale Ma&szlig;e anordnen</a>: Ordnet vertikale Ma&szlig;e mit gleichen Abst&auml;nden an.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeObliqueDimension.svg&amp;filetimestamp=20240707201053&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeObliqueDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/de">Schr&auml;ge Ma&szlig;e anordnen</a>: Ordnet schr&auml;ge Ma&szlig;e mit gleichen Abst&auml;nden an.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeObliqueDimension.svg&amp;filetimestamp=20240707201053&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeObliqueDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/de">Schr&auml;ge Ma&szlig;e anordnen</a>: Ordnet schr&auml;ge Ma&szlig;e mit gleichen Abst&auml;nden an.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionAreaAnnotation.svg&amp;filetimestamp=20240707200110&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionAreaAnnotation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/de">Fl&auml;cheninhalt der ausgew&auml;hlten Fl&auml;chen berechnen</a>: Berechnet den Fl&auml;cheninhalt von ausgew&auml;hlten Fl&auml;chen und f&uuml;gt ihn als Hinweistext mit Rahmen ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionArcLengthAnnotation.svg&amp;filetimestamp=20240707195713&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionArcLengthAnnotation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/de">Bogenl&auml;nge der ausgew&auml;hlten Kanten berechnen</a>: Berechnet die Bogenl&auml;nge ausgew&auml;hlter Kanten und f&uuml;gt sie als Hinweistext ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCustomizeFormat.svg&amp;filetimestamp=20240707202747&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCustomizeFormat.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/de">Formatierung anpassen</a>: Passt die Formatierung von Hinweistexten und Ma&szlig;eintr&auml;gen an. Es k&ouml;nnen Symbole f&uuml;r Form- und Lagetolerierung (GD&amp;T) und andere Sonderzeichen hinzugef&uuml;gt werden.</li></ul>
@@ -349,13 +347,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185514
+Cached time: 20260111185529
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.282 seconds
-Real time usage: 0.384 seconds
-Preprocessor visited node count: 881/1000000
+CPU time usage: 0.350 seconds
+Real time usage: 0.766 seconds
+Preprocessor visited node count: 880/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -365,18 +363,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.591      1 -total
- 27.10%    6.393      1 Template:TechDraw_Tools_navi/de
- 19.33%    4.559      5 Template:VersionPlus/de
- 13.83%    3.263      2 Template:Navigation_menu_2
- 11.42%    2.693     25 Template:Version/de
- 10.94%    2.581      2 Template:Docnav/de
-  8.35%    1.970      1 Template:KEY
-  6.84%    1.613      1 Template:Userdocnavi/de
-  5.45%    1.285      1 Template:TOCright
+100.00%   57.949      1 -total
+ 43.71%   25.327      1 Template:TechDraw_Tools_navi/de
+ 24.50%   14.200      2 Template:Navigation_menu_2
+ 11.50%    6.666      5 Template:VersionPlus/de
+ 10.09%    5.849      1 Template:Userdocnavi/de
+  9.25%    5.360      2 Template:Docnav/de
+  7.70%    4.465     25 Template:Version/de
+  6.15%    3.566      1 Template:TOCright
+  6.10%    3.533      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185514 and revision id 1735739. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185528 and revision id 1735741. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
