Updated page TechDraw ExportPageDXF/de

--- a/wiki/de/TechDraw_ExportPageDXF.html
+++ b/wiki/de/TechDraw_ExportPageDXF.html
@@ -73,14 +73,12 @@
 <p><span id="Limitations"></span>
 </p>
 <h3><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li>Radien- und Durchmesserma&szlig;e werden nur dann korrekt exportiert, wenn sie "innerhalb" des Bogens liegen.</li>
+<ul><li>Radien- und Durchmesserma&szlig;e werden nur dann korrekt exportiert, wenn sie &bdquo;innerhalb&ldquo; des Bogens liegen.</li>
 <li>Skalierung wird nicht unterst&uuml;tzt. Das DXF wird in der tats&auml;chlichen Gr&ouml;&szlig;e der TechDraw Seite gezeichnet.</li>
 <li>Einheiten werden nicht unterst&uuml;tzt. Das DXF wird in Millimetern (mm) gezeichnet. Bema&szlig;ungstext wird genau wie in TechDraw angezeigt.</li>
-<li>TechDraw kann keine <a href="../de/TechDraw_DraftView.html" title="TechDraw DraftView/de">Draft-Ansicht</a> oder <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">Arch-Ansicht</a> nach DXF exportieren. Diese Ansichten sind <a href="../de/SVG.html" title="SVG/de">SVG</a>-Elemente, die intern vom Arbeitsbereich <a href="../de/Draft_Workbench.html" title="Draft Workbench/de">Draft</a> generiert werden, sodass es keine geometrische Form zum Exportieren gibt. Um eine Ansicht als DXF zu exportieren, muss sie mit <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht</a> oder <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a> erstellt worden sein. Man w&auml;hlt z. B. eine <a href="../de/Arch_SectionPlane.html" title="Arch SectionPlane/de">Arch SchnittEbene</a>, danach verwendet man <a href="../de/Draft_Shape2DView.html" title="Draft Shape2DView/de">Draft FormIn2DAnsicht</a> um eine ebene Projektion zu erstellen, und wendet dann <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht</a> auf dieses Objekt an. Alternativ w&auml;hlt man die Objekte in der Baumansicht oder in der 3D-Ansicht aus und exportiert sie mit <b>Datei &rarr; <a href="../de/Std_Export.html" title="Std Export/de">Exportieren...</a></b>.</li>
+<li>TechDraw kann keine <a href="../de/TechDraw_DraftView.html" title="TechDraw DraftView/de">Draft-Ansicht</a> oder <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">Arch-Ansicht</a> nach DXF exportieren. Diese Ansichten sind <a href="../de/SVG.html" title="SVG/de">SVG</a>-Elemente, die intern vom <a href="../de/Draft_Workbench.html" title="Draft Workbench/de">Arbeitsbereich Draft</a> generiert werden, sodass es keine geometrische Form zum Exportieren gibt. Um eine Ansicht als DXF zu exportieren, muss sie mit <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht</a> oder <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a> erstellt worden sein. Man w&auml;hlt z. B. eine <a href="../de/Arch_SectionPlane.html" title="Arch SectionPlane/de">Arch SchnittEbene</a>, danach verwendet man <a href="../de/Draft_Shape2DView.html" title="Draft Shape2DView/de">Draft FormIn2DAnsicht</a> um eine ebene Projektion zu erstellen, und wendet dann <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht</a> auf dieses Objekt an. Alternativ w&auml;hlt man die Objekte in der Baumansicht oder in der 3D-Ansicht aus und exportiert sie mit <b>Datei &rarr; <a href="../de/Std_Export.html" title="Std Export/de">Exportieren...</a></b>.</li>
 <li>Das Schriftfeld einer Seite ist ebenfalls eine <a href="../de/SVG.html" title="SVG/de">SVG</a>-Vorlage, daher wird es auch nicht nach DXF exportiert.</li>
 <li>Im Allgemeinen kann TechDraw nur die Elemente nach DXF exportieren, die von der Klasse <code>Import::ImpExpDxfWrite</code> des <a href="../de/Draft_DXF.html" title="Draft DXF/de">Draft DXF</a>-Moduls unterst&uuml;tzt werden.</li></ul>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -148,13 +146,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185413
+Cached time: 20260111185642
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 389/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.122 seconds
+Preprocessor visited node count: 388/1000000
 Post&#8208;expand include size: 27494/2097152 bytes
 Template argument size: 11307/2097152 bytes
 Highest expansion depth: 6/100
@@ -164,19 +162,19 @@ Unstrip post&#8208;expand size: 2220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.474      1 -total
- 28.60%    5.856      1 Template:TechDraw_Tools_navi/de
- 19.24%    3.939      2 Template:Navigation_menu_2
- 11.51%    2.356      1 Template:GuiCommand/de
- 10.26%    2.100      2 Template:Docnav/de
-  8.63%    1.766      1 Template:Userdocnavi/de
-  7.57%    1.549      1 Template:Code
-  6.92%    1.417      8 Template:MenuCommand
-  5.97%    1.222      1 Template:Incode
-  5.38%    1.102      2 Template:Button
+100.00%   31.499      1 -total
+ 26.32%    8.290      1 Template:TechDraw_Tools_navi/de
+ 16.30%    5.135      2 Template:Navigation_menu_2
+ 12.10%    3.810      1 Template:Userdocnavi/de
+ 11.18%    3.523      2 Template:Docnav/de
+  8.92%    2.810      1 Template:GuiCommand/de
+  7.57%    2.385      1 Template:Code
+  7.49%    2.360      8 Template:MenuCommand
+  6.08%    1.916      1 Template:TRUE
+  5.85%    1.842      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185413 and revision id 1735733. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185642 and revision id 1735745. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
