Updated page TechDraw ExportPageDXF/de

--- a/wiki/de/TechDraw_ExportPageDXF.html
+++ b/wiki/de/TechDraw_ExportPageDXF.html
@@ -82,7 +82,6 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Diese Funktion exportiert die Versionen R12 (AC1009) und R14 (AC1014) von <a href="../de/DXF.html" title="DXF/de">DXF</a>.
 <ul><li>R12 ist eine &auml;ltere, einfachere Version des Standards, sollte aber f&uuml;r die meisten anderen Programme lesbar sein.</li>
 <li>R14 ist die Standardversion.  Sie enth&auml;lt unter anderem Unterst&uuml;tzung f&uuml;r Splines und Ellipsen.</li></ul></li>
@@ -90,7 +89,6 @@
 <ul><li><b>Werkzeuge &rarr; Parameter Berabeiten &rarr; BasisApp/Einstellungen/Mod/Import &rarr; DxfVersionOut</b>. Dies ist ein ganzzahliger Wert. G&uuml;ltige Eintr&auml;ge sind 12 oder 14. Der Standardwert ist 14.</li>
 <li><b>Werkzeuge &rarr; Parameter Berabeiten &rarr; BasisApp/Einstellungen/Mod/Import &rarr; DiscretizeEllipses</b>. Dies ist ein boolescher Wert. Wenn <code>true</code>, werden Splines und Ellipsen in Polylinien umgewandelt; wenn <code>false</code>, werden Splines und Ellipsen als Splines- und Ellipsenobjekte geschrieben. Die Vorgabe ist <code>false</code>. Wenn der Parameter DxfVersionOut 12 ist, werden Splines und Ellipsen immer in Polylinien konvertiert.</li>
 <li><b>Werkzeuge &rarr; Parameter Berabeiten &rarr; BasisApp/Einstellungen/Mod/Import &rarr; maxsegmentlength</b>. Dies ist ein Gleitkommawert. Wenn Splines und Ellipsen in Polylinien umgewandelt werden, bestimmt dieser Parameter die Segmentl&auml;nge.</li></ul></li></ul>
-</div>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
@@ -146,13 +144,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185642
+Cached time: 20260111185723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 388/1000000
+CPU time usage: 0.089 seconds
+Real time usage: 0.238 seconds
+Preprocessor visited node count: 387/1000000
 Post&#8208;expand include size: 27494/2097152 bytes
 Template argument size: 11307/2097152 bytes
 Highest expansion depth: 6/100
@@ -162,19 +160,19 @@ Unstrip post&#8208;expand size: 2220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.499      1 -total
- 26.32%    8.290      1 Template:TechDraw_Tools_navi/de
- 16.30%    5.135      2 Template:Navigation_menu_2
- 12.10%    3.810      1 Template:Userdocnavi/de
- 11.18%    3.523      2 Template:Docnav/de
-  8.92%    2.810      1 Template:GuiCommand/de
-  7.57%    2.385      1 Template:Code
-  7.49%    2.360      8 Template:MenuCommand
-  6.08%    1.916      1 Template:TRUE
-  5.85%    1.842      2 Template:Button
+100.00%   29.440      1 -total
+ 19.91%    5.862      1 Template:TechDraw_Tools_navi/de
+ 13.54%    3.985      2 Template:Docnav/de
+ 12.67%    3.729      1 Template:GuiCommand/de
+ 11.36%    3.344      2 Template:Navigation_menu_2
+  9.30%    2.739      1 Template:Incode
+  9.29%    2.734      2 Template:Button
+  8.81%    2.595      1 Template:Code
+  5.62%    1.653      1 Template:Userdocnavi/de
+  5.14%    1.512      2 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185642 and revision id 1735745. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185722 and revision id 1735755. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
