Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -145,7 +145,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadBoltSide.svg&amp;filetimestamp=20241126213949&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadBoltSide.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/de">|Hilfslinien f&uuml;r Au&szlig;engewinde in Seitenansicht</a>: F&uuml;gt Gewindelinien zur Seitenansicht eines Au&szlig;engewindes (Bolzen, Schraube oder Gewindestange) hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadBoltBottom.svg&amp;filetimestamp=20241126213957&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadBoltBottom.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/de">Hilfslinien f&uuml;r Au&szlig;engewinde in Achsansicht</a>: F&uuml;gt eine Gewindelinie zur Ansicht eines Au&szlig;engewindes (Schraube, Bolzen oder Gewindestange) von oben oder unten hinzu.</li></ul>
 <ul><li><span id="TechDraw_CommandVertexCreationGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/de">Hilfsschnittpunkte</a>: F&uuml;gt Hilfspunkte an Schnittpunkten ausgew&auml;hlter Kanten hinzu.</span></li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/de">Offset Vertex</a>: F&uuml;gt einen Hilfspunkt mit einem bestimmten Versatz von einem ausgew&auml;hlten Knoten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul></dd></dl>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/de">Offset Vertex</a>: F&uuml;gt einen Hilfspunkt mit einem bestimmten Versatz von einem ausgew&auml;hlten Knoten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <div class="mw-translate-fuzzy">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis hinzuf&uuml;gen</a>: F&uuml;gt einen Hilfskreis hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 </div>
@@ -347,12 +347,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185720
+Cached time: 20260111185736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.282 seconds
-Real time usage: 0.353 seconds
+CPU time usage: 0.354 seconds
+Real time usage: 0.575 seconds
 Preprocessor visited node count: 880/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -363,18 +363,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.039      1 -total
- 26.00%    5.989      1 Template:TechDraw_Tools_navi/de
- 15.78%    3.636      2 Template:Docnav/de
- 15.54%    3.581     25 Template:Version/de
- 15.31%    3.527      2 Template:Navigation_menu_2
-  9.87%    2.273      5 Template:VersionPlus/de
-  8.69%    2.001      1 Template:TOCright
-  8.47%    1.952      1 Template:Userdocnavi/de
-  6.45%    1.487      1 Template:KEY
+100.00%   29.333      1 -total
+ 37.71%   11.061      1 Template:TechDraw_Tools_navi/de
+ 20.09%    5.892      2 Template:Navigation_menu_2
+ 16.60%    4.868      5 Template:VersionPlus/de
+ 10.66%    3.127      1 Template:Userdocnavi/de
+ 10.00%    2.932      2 Template:Docnav/de
+  7.36%    2.160     25 Template:Version/de
+  4.60%    1.349      1 Template:TOCright
+  3.54%    1.038      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185719 and revision id 1735753. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111185735 and revision id 1735757. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
