Updated page TechDraw ExportPageDXF/de

--- a/wiki/de/TechDraw_ExportPageDXF.html
+++ b/wiki/de/TechDraw_ExportPageDXF.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExportPageDXF/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExportPageDXF&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_ExportPageDXF.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExportPageDXF (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_ExportPageDXF.html" class="mw-pt-progress mw-pt-progress--med" title="DibujoT&eacute;cnico Exportaci&oacute;nP&aacute;ginaDXF (47% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/TechDraw_ExportPageDXF.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Exporter au format DXF (73% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -93,11 +93,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Das Werkzeug BlattExportierenDXF kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> aus mit den folgenden Funktionen benutzt werden:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug BlattExportierenDXF kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus mit den folgenden Funktionen benutzt werden:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">TechDraw</span><span class="o">.</span><span class="n">writeDXFPage</span><span class="p">(</span><span class="n">page</span><span class="p">,</span><span class="n">filename</span><span class="p">)</span>
 </pre></div>
 <p><br>
@@ -144,35 +141,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185723
+Cached time: 20260111185801
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.238 seconds
-Preprocessor visited node count: 387/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 386/1000000
 Post&#8208;expand include size: 27494/2097152 bytes
 Template argument size: 11307/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2220/5000000 bytes
+Unstrip post&#8208;expand size: 2224/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.440      1 -total
- 19.91%    5.862      1 Template:TechDraw_Tools_navi/de
- 13.54%    3.985      2 Template:Docnav/de
- 12.67%    3.729      1 Template:GuiCommand/de
- 11.36%    3.344      2 Template:Navigation_menu_2
-  9.30%    2.739      1 Template:Incode
-  9.29%    2.734      2 Template:Button
-  8.81%    2.595      1 Template:Code
-  5.62%    1.653      1 Template:Userdocnavi/de
-  5.14%    1.512      2 Template:FALSE
+100.00%   40.498      1 -total
+ 25.83%   10.461      1 Template:TechDraw_Tools_navi/de
+ 17.34%    7.023      2 Template:Navigation_menu_2
+ 12.68%    5.135      1 Template:Userdocnavi/de
+ 10.05%    4.072      1 Template:GuiCommand/de
+  8.53%    3.456      2 Template:Docnav/de
+  8.48%    3.436      1 Template:TRUE
+  7.36%    2.979      2 Template:Button
+  6.70%    2.714      1 Template:Incode
+  6.09%    2.465      8 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185722 and revision id 1735755. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:187495-0!canonical and timestamp 20260111185801 and revision id 1735759. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
