Updated page TechDraw CommandAddOffsetVertex/de

--- a/wiki/de/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/de/TechDraw_CommandAddOffsetVertex.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CommandAddOffsetVertex/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CommandAddOffsetVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_CommandAddOffsetVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CommandAddOffsetVertex (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Ajouter un sommet d&eacute;cal&eacute; (56% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../pl/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Dodaj odsuni&#281;cie wierzcho&#322;ka (56% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../fr/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ajouter un sommet d&eacute;cal&eacute; (78% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../pl/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj odsuni&#281;cie wierzcho&#322;ka (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw CommandAddOffsetVertex
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1042;&#1077;&#1088;&#1096;&#1080;&#1085;&#1091; &#1089;&#1086; &#1057;&#1084;&#1077;&#1097;&#1077;&#1085;&#1080;&#1077;&#1084;) (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/de">Erg&auml;nzungKnotenAnSchnittstelle</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">Erg&auml;nzungHilfskreisZeichnen</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -77,14 +75,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/de">Erg&auml;nzungKnotenAnSchnittstelle</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">Erg&auml;nzungHilfskreisZeichnen</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -121,34 +117,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112504
+Cached time: 20260111185922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 307/1000000
-Post&#8208;expand include size: 28214/2097152 bytes
-Template argument size: 11263/2097152 bytes
+CPU time usage: 0.075 seconds
+Real time usage: 0.221 seconds
+Preprocessor visited node count: 305/1000000
+Post&#8208;expand include size: 28052/2097152 bytes
+Template argument size: 11155/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1385/5000000 bytes
+Unstrip post&#8208;expand size: 1393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.873      1 -total
- 45.72%    9.543      1 Template:TechDraw_Tools_navi/de
- 23.61%    4.928      2 Template:Navigation_menu_2
- 11.87%    2.478      1 Template:Userdocnavi/de
- 10.81%    2.256      2 Template:Docnav/de
- 10.33%    2.157      1 Template:GuiCommand/de
-  7.55%    1.575      1 Template:Caption
-  5.22%    1.089      3 Template:MenuCommand
-  5.21%    1.087      2 Template:Button
+100.00%   63.176      1 -total
+ 30.17%   19.063      2 Template:Docnav/de
+ 22.01%   13.904      1 Template:TechDraw_Tools_navi/de
+ 12.23%    7.728      1 Template:GuiCommand/de
+ 11.71%    7.398      3 Template:MenuCommand
+ 11.35%    7.169      1 Template:Userdocnavi/de
+  8.74%    5.524      2 Template:Navigation_menu_2
+  5.99%    3.786      2 Template:Button
+  5.15%    3.252      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111112503 and revision id 1733321. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111185922 and revision id 1735763. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
